Pongo un marcador de puntos al finalizar partida

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
   <div class="title"><b>Ironhack bootcamp snakegame</b> by Jorge Abad</div>
   <div class="container"></div>
-  <div class="info"><b>Info: </b>Move snake with arrow up, down, left, right keys. Stop/restart with "p" key. Eat red food for the snake to grow
-  Do not self-eat snake!</div>
+  <div class="info">
+    <div id="info"><b>Info: </b>Move snake with arrow up, down, left, right keys. Stop/restart with "p" key. Eat red food for the snake to grow
+      Do not self-eat snake!
+    </div>
+    <div id="result">
+      
+    </div>
+  </div>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
