Cambios CSS y HTML, nuevo fondo

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 </head>
 <body>
   <div class="title"><b>Ironhack bootcamp snakegame</b> by Jorge Abad</div>
-  <div class="container"></div>
   <div class="info">
-    <div id="info"><b>Info: </b>Move snake with arrow up, down, left, right keys. Stop/restart with "p" key. Eat red food for the snake to grow
+    <div id="info"><b>Info: </b>Move snake with arrow up, down, left, right keys. Stop/restart with "p" key. Eat red food for the snake to grow.
       Do not self-eat snake!
     </div>
-    <div id="result">
-      
-    </div>
+    <div id="result"></div>
   </div>
-
+  <div class="container"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/snake.js"></script>
